- Display your PvP rank when you're in a PvP zone.
- $ai_v{temp}{pvp} is set to 1 in PVP maps, 2 in GVG.
- Female characters are now supported on inRO.
- Kore now supports "monster-NPCs", NPCs which look like monsters.
- Completed Freya support, for servers like VanRO and EuphRO.
- New "Vx" interface, ported from modKore.
  See http://openkore.sourceforge.net/forum/viewtopic.php?p=50860

New commands:
- storage log
  Manually force writing to storage.txt. Some people complain that
  the storage log is broken, so until that has been resolved, this
  command will do.
- ai on
  ai off
  Turns AI on/off.
- card list
  List cards in your inventory.
- card use <card inventory number>
  Get the list of items you can slot the card into.
- card mergelist
  Show the list of items you can slot the card into again.
- card mergecancel
  Cancel the card merging request.
- card merge <merge list number>
  Merge the card into the item.
- 'weight [<#>]' command tells you how much more stuff you can carry
  (if you want to know how many more Red Potion you can carry, and
  Red Potion weighs 7, then type 'weight 7').
- arrowcraft forceuse #
  Craft arrows immediately without using the skill.
  On many servers any class can create arrows using this exploit.
  # is the inventory number of the item you wish to craft into arrows.

New config options:
- partySkill: target_dead
  Only use the skill on a dead player. Useful for Resurrection.
- avoidGM_namePattern (regular expression)
  In case your server uses non-standard GM names, you can specify a
  regular expression for GM names with this option.
- teleportAuto_totalDmg (number)
  teleportAuto_totalDmgInLock (number)
  Teleport away if a monster has done this much total damage to you.
- dcOnZeny (number)
  Disconnect automatically when your Zeny equals or lower than the
  specified number. Useful if you use buyAuto or the auto buy plugin.
- teleportAuto_atkCount (number)