@@ -77,6 +77,7 @@ New features:
 - Completed Freya support, for servers like VanRO and EuphRO.
 - New "Vx" interface, ported from modKore.
   See http://openkore.sourceforge.net/forum/viewtopic.php?p=50860
+- Display numerical character ID when logging in.
 
 New commands:
 - storage log
@@ -154,6 +155,7 @@ Internal:
 - Network::Send::sendMove() redundant $r_socket first argument removed.
 - New functions Commands::register() and Commands::unregister() for easy
   registration of new commands in plugins.
+- Store $guild{member}[$c]{charID}.
 
 Credits:
 - Damokles: case sensitivity fix, avoidGM_namePattern.
